--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,8 +7,8 @@
 }
 
 html, body {
-    height: 115vh;
-    width: 115vw;
+    height: 100vh;
+    width: 100vw;
     background-color: black;
 }
 
@@ -16,13 +16,15 @@ body {
     background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
+
 }
+
 
 main {
     position: relative;
     height: 100vh;
-
-   }
+    
+}
 
 section#telefone {
     position: absolute;
@@ -30,15 +32,33 @@ section#telefone {
     left: 50%;
     transform: translate(-50%, -50%);
 
-    height: 627px;
-    width: 311px;
-    background: url('../imagens/frame-iphone.png') no-repeat;
+    height: 500px;
+    width: 249px;
 }
 
 iframe#tela {
     position: relative;
-    top: 80px;
+    top: 10px;
     left: 22px;
-    width: 269px;
-    height: 471px;
+    width: 300px;
+    height: 515px;
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.397);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 1px solid rgba(255, 255, 255, 0.63);
+    transform: translate(-2px, 2px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.466);
+    transition: transform .1s;
 }
