--- a/estilos/style.css
+++ b/estilos/style.css
@@ -24,6 +24,7 @@ main {
     position: relative;
     height: 100vh;
     
+    
 }
 
 section#telefone {
@@ -34,14 +35,16 @@ section#telefone {
 
     height: 500px;
     width: 249px;
+    background: url('../imagens/frame-iphone5.png') no-repeat;
 }
 
 iframe#tela {
     position: relative;
-    top: 10px;
-    left: 22px;
-    width: 300px;
-    height: 515px;
+    top: 63px;
+    left: 18px;
+    width: 215px;
+    height: 377px;
+
 }
 
 section#redes-sociais {
